--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -26,8 +26,8 @@
 
   .chat-main__message-form
     .chat-main__message-form__new-message
-      %input{:placeholder => "type a message", :type => "text", :value => "", :class => "chat-main__message-form__new-message--input-text"}
+      %input{placeholder: "type a message", type: "text", value: "", class: "chat-main__message-form__new-message--input-text"}
       %label{class: "chat-main__message-form__new-message--input-image"}
         %i.far.fa-image
         %input{type: "file", class: "chat-main__message-form__new-message--input-image-file"}
-    %input{:placeholder => "Send", :type => "submit", :value => "Send", :class => "chat-main__message-form--submit-btn"}
+    %input{placeholder: "Send", type: "submit", value: "Send", class: "chat-main__message-form--submit-btn"}
