機能を実装

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -47,6 +47,9 @@ $color-icon: #38aef0;
       height: 91px;
       width: 100%;
       padding: 20px 20px 40px 20px;
+      &--info {
+        text-decoration: none;
+      }
       &--group-name {
         font-size: 15px;
         color: $color-white;
