--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,18 +2,19 @@
   .side-bar__user-name
     .side-bar__user-name__top-items
       .side-bar__user-name__top-items--name
-        %p tomoki
+        = current_user.name
       %ul.side-bar__user-name__top-items--icons
         %li.side-bar__user-name__top-items--edit-user
-        = link_to "#" do
+        = link_to new_group_path do
           %i.far.fa-edit
         %li.side-bar__user-name__top-items--new-group
-        = link_to "#" do
+        = link_to edit_user_path(current_user) do
           %i.fa.fa-cog
   .side-bar__group-list
-    .side-bar__group-list__contents
-      %p.side-bar__group-list__contents--group-name techcamp
-      %p.side-bar__group-list__contents--message まだメッセージがありません
-    .side-bar__group-list__contents
-      %p.side-bar__group-list__contents--group-name techcamp2
-      %p.side-bar__group-list__contents--message まだメッセージがありません
+    - current_user.groups.each do |group|
+      .side-bar__group-list__contents
+        =link_to edit_group_path(group.id), class: "side-bar__group-list__contents--info" do
+          .side-bar__group-list__contents--group-name
+            = group.name
+          .side-bar__group-list__contents--message
+            メッセージはまだありません。
