--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -13,8 +13,8 @@
   .side-bar__group-list
     - current_user.groups.each do |group|
       .side-bar__group-list__contents
-        =link_to edit_group_path(group.id), class: "side-bar__group-list__contents--info" do
+        =link_to group_messages_path(group), class: "side-bar__group-list__contents--info" do
           .side-bar__group-list__contents--group-name
             = group.name
           .side-bar__group-list__contents--message
-            メッセージはまだありません。
+            = group.show_last_message
