非同期通信の実装

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -111,6 +111,7 @@ $color-icon: #38aef0;
     width: calc(100vw - 300px);
     margin-top: 100px;
     padding-top: 35px;
+    overflow: scroll;
     &__contents {
       margin-left: 40px;
       &__info {
