[WIP]自動更新機能の実装

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.chat-main__message-list__contents
+.chat-main__message-list__contents{data: {message: {id: message.id}}}
   .chat-main__message-list__contents__info
     .chat-main__message-list__contents__info--member-name
       = message.user.name
