--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -146,11 +146,11 @@ $color-icon: #38aef0;
       justify-content: space-between;
       position: relative;
     &__message {
-      width: 945px;
+      width: calc(100vw - 500px);
       &--input-text {
         padding-left: 10px;
         height: 50px;
-        width: 945px;
+        width: calc(100vw - 500px);
         border: none;
       }
       &--form-mask {
